--- a/AndroidApp/app/src/main/res/layout/activity_email_password.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_email_password.xml
@@ -90,10 +90,23 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="225dp"
-        android:text="Заполните пользовательские учетные данные для входа в систему"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="Заполните пользовательские учетные данные для входа в систему!"
         android:textAlignment="center"
         android:textColor="#F8F5F5"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="190dp"
+        android:layout_marginTop="725dp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="Designed by Alexey Gorlov, 2022"
+        android:textAlignment="center"
+        android:textColor="#F8F5F5"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/textView12"
