--- a/AndroidApp/app/src/main/res/layout/activity_settings.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_settings.xml
@@ -25,32 +25,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="70dp"
-        android:text="Отображать показания:"
-        android:textColor="@color/black"
+        android:layout_marginTop="60dp"
+        android:text="Отображать графики:"
+        android:textColor="@color/purple_700"
         android:textSize="20sp" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="130dp"
         android:background="?android:attr/listDivider"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/purple_700"
         android:backgroundTintMode="add"
         android:visibility="visible"
         tools:visibility="visible" />
 
     <CheckBox
-        android:id="@+id/checkBox0"
+        android:id="@+id/checkBox_view_mode1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="60dp"
-        android:buttonTint="@color/black"
-        android:text="Все"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="85dp"
+        android:buttonTint="@color/purple_700"
+        android:checked="false"
+        android:text="Все по отдельности"
         android:textAlignment="textStart"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:textSize="16sp" />
 
     <TextView
@@ -58,55 +59,121 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="220dp"
         android:text="T [°C] воздуха на улице"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView55"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="160dp"
+        android:text="T [°C] воздуха дома"
+        android:textColor="@color/purple_700"
         android:textSize="20sp" />
 
     <CheckBox
-        android:id="@+id/checkBox1"
+        android:id="@+id/checkBox_TEMP_HOME"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="110dp"
-        android:buttonTint="@color/black"
-        android:textColor="@color/black"
+        android:layout_marginTop="150dp"
+        android:buttonTint="@color/purple_700"
+        android:checked="false"
+        android:textColor="@color/purple_700"
         android:textSize="16sp" />
+
+    <CheckBox
+        android:id="@+id/checkBox_TEMP_STREET"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="210dp"
+        android:buttonTint="@color/purple_700"
+        android:checked="false"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="280dp"
         android:text="RH [%] воздуха на улице"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView66"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="340dp"
+        android:text="RH [%] воздуха дома"
+        android:textColor="@color/purple_700"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView77"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="400dp"
+        android:text="Атм.давление[мм.рт.ст]"
+        android:textColor="@color/purple_700"
+        android:textSize="20sp" />
+
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/checkBox_HUM_STREET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="170dp"
-        android:buttonTint="@color/black"
-        android:textColor="@color/black"
+        android:layout_marginTop="270dp"
+        android:buttonTint="@color/purple_700"
+        android:textColor="@color/purple_700"
         android:textSize="16sp" />
+
+    <CheckBox
+        android:id="@+id/checkBox_HUM_HOME"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="330dp"
+        android:buttonTint="@color/purple_700"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp" />
+
+    <CheckBox
+        android:id="@+id/checkBox_PRESSURE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="390dp"
+        android:buttonTint="@color/purple_700"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp" />
+
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="460dp"
         android:text="Скорость ветра [м/с]"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:textSize="20sp" />
+
     <CheckBox
-        android:id="@+id/checkBox3"
+        android:id="@+id/checkBox_WIND_SPEED"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="230dp"
-        android:buttonTint="@color/black"
-        android:textColor="@color/black"
+        android:layout_marginTop="450dp"
+        android:buttonTint="@color/purple_700"
+        android:textColor="@color/purple_700"
         android:textSize="16sp" />
 
     <TextView
@@ -114,19 +181,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="520dp"
         android:text="Направление ветра"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:textSize="20sp" />
 
     <CheckBox
-        android:id="@+id/checkBox4"
+        android:id="@+id/checkBox_WIND_DIRECT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="290dp"
-        android:buttonTint="@color/black"
-        android:textColor="@color/black"
+        android:layout_marginTop="510dp"
+        android:buttonTint="@color/purple_700"
+        android:textColor="@color/purple_700"
         android:textSize="16sp" />
 
     <TextView
@@ -134,36 +201,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="360dp"
+        android:layout_marginTop="580dp"
         android:text="Кол-во осадков [%]"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:textSize="20sp" />
+
     <CheckBox
-        android:id="@+id/checkBox5"
+        android:id="@+id/checkBox_RAIN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="350dp"
-        android:buttonTint="@color/black"
-        android:textColor="@color/black"
+        android:layout_marginTop="570dp"
+        android:buttonTint="@color/purple_700"
+        android:textColor="@color/purple_700"
         android:textSize="16sp" />
+
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="420dp"
+        android:layout_marginTop="640dp"
         android:text="Заряд АКБ [В]"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:textSize="20sp" />
+
     <CheckBox
-        android:id="@+id/checkBox6"
+        android:id="@+id/checkBox_VBAT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300dp"
-        android:layout_marginTop="410dp"
-        android:buttonTint="@color/black"
-        android:textColor="@color/black"
+        android:layout_marginTop="630dp"
+        android:buttonTint="@color/purple_700"
+        android:textColor="@color/purple_700"
         android:textSize="16sp" />
 
 </RelativeLayout>
