--- a/AndroidApp/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AndroidApp/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,12 +6,13 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/home_icon"
             android:title="@string/menu_home" />
+
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_chart"
+            android:icon="@drawable/chart_icon"
+            android:title="@string/menu_chart" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
