--- a/AndroidApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AndroidApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.homeweatherstationapp.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_chart"
+        android:name="com.example.homeweatherstationapp.ui.gallery.ChartsFragment"
+        android:label="@string/menu_chart"
+        tools:layout="@layout/fragment_charts" />
 
     <fragment
         android:id="@+id/nav_slideshow"
