--- a/AndroidApp/app/src/main/res/menu/main.xml
+++ b/AndroidApp/app/src/main/res/menu/main.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_about"
         android:orderInCategory="100"
-        android:title="Chart settings"
+        android:title="About App"
         app:showAsAction="never" />
 </menu>
