--- a/AndroidApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AndroidApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,14 @@
 
     <fragment
         android:id="@+id/nav_chart"
-        android:name="com.example.homeweatherstationapp.ui.gallery.ChartsFragment"
+        android:name="com.example.homeweatherstationapp.ui.charts.ChartsFragment"
         android:label="@string/menu_chart"
         tools:layout="@layout/fragment_charts" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.homeweatherstationapp.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_chart_setting"
+        android:name="com.example.homeweatherstationapp.ui.chart_settings.ChartSettingFragment"
+        android:label="@string/menu_chart_setting"
+        tools:layout="@layout/fragment_chart_setting" />
+
 </navigation>
