--- a/AndroidApp/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_home.xml
@@ -15,8 +15,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="serif"
+        android:textAlignment="viewStart"
+        android:textAllCaps="false"
         android:textColor="@color/purple_700"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/HOME_TEMP"
@@ -24,28 +28,34 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="195dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="serif"
         android:textColor="@color/purple_700"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/degr1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="140dp"
         android:layout_marginTop="43dp"
+        android:fontFamily="casual"
         android:text="°C"
         android:textColor="@color/purple_700"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/degr2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="310dp"
+        android:layout_marginLeft="330dp"
         android:layout_marginTop="43dp"
+        android:fontFamily="casual"
         android:text="°C"
         android:textColor="@color/purple_700"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/STREET_HUM"
@@ -53,37 +63,57 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="80dp"
+        android:fontFamily="serif"
         android:textColor="@color/purple_700"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/HOME_HUM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/purple_700"
-        android:layout_marginTop="80dp"
         android:layout_marginLeft="195dp"
-        android:textSize="60sp" />
+        android:layout_marginTop="80dp"
+        android:fontFamily="serif"
+        android:textColor="@color/purple_700"
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/perc"
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="125dp"
+        android:layout_marginLeft="140dp"
         android:layout_marginTop="113dp"
+        android:fontFamily="casual"
         android:text="%"
         android:textColor="@color/purple_700"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/perc4"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="195dp"
+        android:fontFamily="casual"
+        android:text="%"
+        android:textColor="@color/purple_700"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/perc3"
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="315dp"
+        android:layout_marginLeft="330dp"
         android:layout_marginTop="113dp"
+        android:fontFamily="casual"
         android:text="%"
         android:textColor="@color/purple_700"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/RAIN"
@@ -91,8 +121,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="165dp"
+        android:fontFamily="serif"
         android:textColor="@color/purple_700"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
 
     <TextView
@@ -101,18 +133,22 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="200dp"
         android:layout_marginTop="165dp"
+        android:fontFamily="serif"
         android:textColor="@color/purple_700"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
 
     <TextView
         android:id="@+id/WIND_SPEED"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="200dp"
+        android:layout_marginLeft="180dp"
         android:layout_marginTop="250dp"
+        android:fontFamily="serif"
         android:textColor="@color/purple_700"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/PRESSURE"
@@ -120,24 +156,40 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="430dp"
+        android:fontFamily="serif"
         android:textColor="@color/purple_700"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/TIME"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="435dp"
+        android:fontFamily="serif"
+        android:textAlignment="viewStart"
+        android:textColor="@color/purple_700"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/WIND_DIRECTION"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="200dp"
+        android:layout_marginLeft="180dp"
         android:layout_marginTop="320dp"
+        android:fontFamily="serif"
         android:textColor="@color/purple_700"
-        android:textSize="60sp" />
+        android:textSize="60sp"
+        android:textStyle="bold" />
 
 
     <View
         android:id="@+id/divider3"
-        android:layout_width="116dp"
+        android:layout_width="110dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="68dp"
+        android:layout_marginLeft="74dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
         android:backgroundTintMode="add" />
@@ -147,61 +199,64 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/purple_500"
+        android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:text="OUTDOOR"
+        android:textAlignment="viewStart"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="140dp"
         android:layout_marginTop="30dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="TEMPERATURE"
+        android:text="TEMP"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="310dp"
+        android:layout_marginLeft="330dp"
         android:layout_marginTop="30dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="TEMPERATURE"
+        android:text="TEMP"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView76"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="140dp"
         android:layout_marginTop="100dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="HUMIDITY"
+        android:text="HUM"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="310dp"
+        android:layout_marginLeft="330dp"
         android:layout_marginTop="100dp"
         android:background="@color/purple_500"
         android:singleLine="true"
-        android:text="HUMIDITY"
+        android:text="HUM"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
     <TextView
@@ -209,10 +264,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="190dp"
-        android:background="@color/purple_700"
+        android:background="@color/purple_500"
+        android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:text="INDOOR"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <View
@@ -225,9 +282,9 @@
 
     <View
         android:id="@+id/divider9"
-        android:layout_width="129dp"
+        android:layout_width="123dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="244dp"
+        android:layout_marginLeft="250dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
         android:backgroundTintMode="add" />
@@ -255,9 +312,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="155dp"
         android:background="@color/purple_500"
+        android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:text="RAINFALL"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
@@ -266,9 +325,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
         android:background="@color/purple_500"
+        android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:text="WIND"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
@@ -277,9 +338,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="420dp"
         android:background="@color/purple_500"
+        android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:text="PRESSURE"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
@@ -288,6 +351,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="510dp"
         android:background="@color/purple_500"
+        android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:text="FORECAST"
         android:textColor="@color/white"
@@ -300,9 +364,11 @@
         android:layout_marginLeft="190dp"
         android:layout_marginTop="420dp"
         android:background="@color/purple_500"
+        android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
-        android:text="MOON PHASE"
+        android:text="TIME OF LAST UPDATE"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <View
@@ -317,9 +383,9 @@
 
     <View
         android:id="@+id/divider13"
-        android:layout_width="112dp"
+        android:layout_width="110dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="73dp"
+        android:layout_marginLeft="75dp"
         android:layout_marginTop="420dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -327,9 +393,9 @@
 
     <View
         android:id="@+id/divider17"
-        android:layout_width="300dp"
+        android:layout_width="306dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="75dp"
+        android:layout_marginLeft="67dp"
         android:layout_marginTop="510dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -337,9 +403,9 @@
 
     <View
         android:id="@+id/divider15"
-        android:layout_width="77dp"
+        android:layout_width="27dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="297dp"
+        android:layout_marginLeft="347dp"
         android:layout_marginTop="420dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -347,9 +413,9 @@
 
     <View
         android:id="@+id/divider11"
-        android:layout_width="335dp"
+        android:layout_width="332dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="38dp"
+        android:layout_marginLeft="42dp"
         android:layout_marginTop="240dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -377,7 +443,7 @@
         android:id="@+id/divider16"
         android:layout_width="2dp"
         android:layout_height="79dp"
-        android:layout_marginLeft="373dp"
+        android:layout_marginLeft="372dp"
         android:layout_marginTop="420dp"
         android:background="@color/purple_700"
         android:backgroundTintMode="add" />
@@ -386,16 +452,16 @@
         android:id="@+id/divider18"
         android:layout_width="2dp"
         android:layout_height="199dp"
-        android:layout_marginLeft="373dp"
+        android:layout_marginLeft="372dp"
         android:layout_marginTop="510dp"
         android:background="@color/purple_700"
         android:backgroundTintMode="add" />
 
     <View
         android:id="@+id/divider8"
-        android:layout_width="95dp"
+        android:layout_width="93dp"
         android:layout_height="2dp"
-        android:layout_marginLeft="278dp"
+        android:layout_marginLeft="280dp"
         android:layout_marginTop="155dp"
         android:background="?android:attr/listDivider"
         android:backgroundTint="@color/purple_700"
@@ -417,9 +483,11 @@
         android:layout_marginLeft="190dp"
         android:layout_marginTop="155dp"
         android:background="@color/purple_500"
+        android:fontFamily="sans-serif-smallcaps"
         android:singleLine="true"
         android:text="BAT CHARGE"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
@@ -428,29 +496,35 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="325dp"
         android:layout_marginTop="195dp"
+        android:fontFamily="casual"
         android:text="V"
         android:textColor="@color/purple_700"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/perc2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="320dp"
+        android:layout_marginLeft="315dp"
         android:layout_marginTop="293dp"
+        android:fontFamily="casual"
         android:text="m/s"
         android:textColor="@color/purple_700"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/hg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="115dp"
+        android:layout_marginLeft="110dp"
         android:layout_marginTop="470dp"
+        android:fontFamily="casual"
         android:text="mm Hg"
         android:textColor="@color/purple_700"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imagewind"
@@ -459,30 +533,31 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="260dp"
         android:src="@drawable/def" />
+
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="320dp"
+        android:layout_marginLeft="315dp"
         android:layout_marginTop="270dp"
         android:background="@color/purple_500"
         android:singleLine="true"
         android:text="VALUE"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="320dp"
+        android:layout_marginLeft="315dp"
         android:layout_marginTop="340dp"
         android:background="@color/purple_500"
         android:singleLine="true"
         android:text="DIRECTION"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
 
