--- a/AndroidApp/app/src/main/res/layout/activity_email_password.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_email_password.xml
@@ -56,6 +56,7 @@
         android:layout_marginTop="525dp"
         android:layout_weight="1"
         android:text="Авторизация"
+        android:textStyle="bold"
         app:iconTint="#F6F5F5"
         tools:layout_editor_absoluteX="49dp"
         tools:layout_editor_absoluteY="542dp" />
@@ -69,6 +70,7 @@
         android:layout_marginRight="-377dp"
         android:layout_weight="1"
         android:text="Регистрация"
+        android:textStyle="bold"
         tools:layout_editor_absoluteX="226dp"
         tools:layout_editor_absoluteY="542dp" />
 
@@ -94,7 +96,8 @@
         android:text="Заполните пользовательские учетные данные для входа в систему!"
         android:textAlignment="center"
         android:textColor="#F8F5F5"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/textView15"
