--- a/AndroidApp/app/src/main/res/layout/nav_header_main.xml
+++ b/AndroidApp/app/src/main/res/layout/nav_header_main.xml
@@ -25,9 +25,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:paddingTop="2dp"
         android:text="HomeWeatherStationApp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAlignment="viewStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView"
