--- a/AndroidApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AndroidApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,4 +23,10 @@
         android:label="@string/menu_chart_setting"
         tools:layout="@layout/fragment_chart_setting" />
 
+    <fragment
+        android:id="@+id/nav_more_details"
+        android:name="com.example.homeweatherstationapp.MoreDetailsFragment"
+        android:label="@string/more_details"
+        tools:layout="@layout/fragment_more_details" />
+
 </navigation>
