v.1.2.6 1.Исправлен алгоритм получения сообщения в приемнике от передатчика (вроде бы решена проблема с остановкой передачи данных на сервер). 2.Доработки в приложении для android. 3.Свежая версия сервера для raspberry.

--- a/AndroidApp_with_MySQL/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AndroidApp_with_MySQL/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,5 +22,10 @@
             android:id="@+id/nav_more_details"
             android:icon="@drawable/details"
             android:title="@string/more_details" />
+
+        <item
+            android:id="@+id/nav_db_table"
+            android:icon="@drawable/table"
+            android:title="Database" />
     </group>
 </menu>
