--- a/AndroidApp_with_MySQL/app/src/main/res/layout/activity_about.xml
+++ b/AndroidApp_with_MySQL/app/src/main/res/layout/activity_about.xml
@@ -21,7 +21,7 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="160dp"
+        android:layout_width="175dp"
         android:layout_height="183dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="360dp"
@@ -30,16 +30,6 @@
         android:scaleType="centerInside"
         app:srcCompat="@drawable/atmel_avr" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="171dp"
-        android:layout_height="170dp"
-        android:layout_marginLeft="210dp"
-        android:layout_marginTop="549dp"
-        android:adjustViewBounds="false"
-        android:cropToPadding="false"
-        android:scaleType="centerInside"
-        app:srcCompat="@drawable/firebase" />
 
     <ImageView
         android:id="@+id/imageView1"
@@ -52,12 +42,23 @@
         android:scaleType="centerInside"
         app:srcCompat="@drawable/jpg_about_1" />
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="190dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="194dp"
+        android:layout_marginTop="534dp"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
+        android:scaleType="centerInside"
+        app:srcCompat="@drawable/lamp" />
+
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="180dp"
+        android:layout_width="190dp"
+        android:layout_height="182dp"
+        android:layout_marginLeft="190dp"
         android:layout_marginTop="360dp"
         android:adjustViewBounds="false"
         android:cropToPadding="false"
@@ -123,14 +124,14 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="260dp"
         android:fontFamily="serif"
-        android:text="Ссылка на базу данных Firebase: "
+        android:text="Ссылка на проект на GitHub: "
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/firebase_link"
+        android:id="@+id/github_link"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
